# TAIKO

./: .gitignore  CMakeLists.txt  README.md  build.sh
maps/: alone.txt  aloneEasy.txt  aloneMed.txt  i.txt  lost_kitten.txt  megalovania.txt  megalovania2.txt  test.txt  untouched.txt
src/: BeatMap.cpp  BeatMap.hpp  Game.cpp  Game.hpp  IGameState.hpp  Judge.hpp  MenuState.cpp  MenuState.hpp  Note.hpp  NoteRender.cpp  NoteRender.hpp  PauseState.cpp  PauseState.hpp  PlayingState.cpp  PlayingState.hpp  ResultState.cpp  ResultState.hpp  Skin.hpp
